# sandra-nguemto.github.io

./: _config.yml  pyproject.toml
_blogposts/: blogpost1.md  lcd.html  lcd.md
_blogposts/myfirstbook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
_blogposts/myfirstbook/_build/html/: .buildinfo
_blogposts/myfirstbook/_build/jupyter_execute/: markdown-notebooks.ipynb
_data/: navigation.yml
_pages/: blogposts.md  cv.md  year-archive.md
_posts/: blogpost1.md
