[tool.poetry]
name = "sandra-nguemto-github-io"
version = "0.1.0"
description = ""
authors = ["Sandra Nguemto <agn2120@columbia.edu>"]
readme = "README.md"
packages = [{include = "sandra_nguemto"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.3"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
polars = "^1.13.0"
altair = "^5.4.1"
plotly = "^5.24.1"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
